--- a/xiaokele_data/package.json
+++ b/xiaokele_data/package.json
@@ -18,8 +18,8 @@
   },
   "dependencies": {
     "mpvue": "^1.0.11",
-    "vuex": "^3.0.1",
-    "vant-weapp": "^0.3.8"
+    "vant-weapp": "^0.3.9",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "mpvue-loader": "^1.1.2",
