--- a/xiaokele_data/package.json
+++ b/xiaokele_data/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "mpvue": "^1.0.11",
+    "mpvue-lint": "^1.0.72",
     "vant-weapp": "^0.3.9",
     "vuex": "^3.0.1"
   },
