--- a/xiaokele_data/src/app.json
+++ b/xiaokele_data/src/app.json
@@ -10,17 +10,10 @@
     "list": [
       {
         "pagePath": "pages/index/main",
-       
-        "text": "健康管理"
-      },
-      {
-        "pagePath": "pages/user/profile/main",
-       
-        "text": "个人中心2"
+        "text": "首页"
       },
       {
         "pagePath": "pages/user/main",
-       
         "text": "个人中心"
       }
     ]
