--- a/xiaokele_data/project.config.json
+++ b/xiaokele_data/project.config.json
@@ -1,13 +1,17 @@
 {
-  "miniprogramRoot": "./dist",
-  "projectname": "xiaokele_data",
-  "description": "",
-  "appid": "wx83ac407b4d438f5e",
-  "setting": {
-    "urlCheck": true,
-    "es6": false,
-    "postcss": false,
-    "minified": false
-  },
-  "compileType": "miniprogram"
+	"miniprogramRoot": "dist/",
+	"projectname": "xiaokele_data",
+	"description": "",
+	"appid": "wx83ac407b4d438f5e",
+	"setting": {
+		"urlCheck": false,
+		"es6": false,
+		"postcss": false,
+		"minified": false,
+		"newFeature": true,
+		"nodeModules": false,
+		"uglifyFileName": true
+	},
+	"compileType": "miniprogram",
+	"condition": {}
 }
